# Tour_Guide

./: .coveragerc  .env.example  .gitignore  API_KEY_SETUP.md  API_SETUP_GUIDE.md  DEVELOPMENT_LOG.md  GETTING_STARTED.md  HOW_TO_RUN_DEMO.md  HW4.docx  INDEX.md  INTERACTIVE_MODE.md  PROJECT_SUMMARY.txt  QUICK_SETUP.md  QUICK_START_REAL_CONTENT.md  README.md  REAL_CONTENT_SETUP_SUMMARY.txt  START_HERE.md  TEST_ROUTE_RAMAT_HASHARON_TO_TEL_AVIV.md  TOUR_GUIDE_JUNCTION_SYSTEM.md  TOUR_GUIDE_SKILLS_SUMMARY.md  demo_technion_to_tau.py  output_test.txt  output_test_demo.txt  pyproject.toml  requirements.txt  run_demo.py  setup.py  test_full_flow.py  test_with_env.py  tour_guide_interactive.py
.claude/: settings.local.json
agent_orchestrator/: agent_orchestrator.py  agents.py  base_agent.py  junction_processor.py  models.py
agents/: history-finder.md  judge.md  music-finder.md  video-finder.md
data/: README.md
docs/: API_KEYS_SETUP.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  COST_ANALYSIS.md  DEVELOPER_GUIDE.md  DIAGRAMS.md  LOGGING.md  PERFORMANCE_BENCHMARKS.md  PRD.md  README.md  USER_GUIDE.md  UX_EVALUATION.md
junction_orchestrator/: README.md  __init__.py  example.py  models.py  orchestrator.py  tempo_controller.py
notebooks/: parameter_sensitivity_analysis.ipynb  results_visualization.ipynb
results/: README.md  parameter_analysis.json
route_fetcher/: __init__.py  example.py  junction_extractor.py
scripts/: fetch_real_content.py  run_real_content_fetch.sh  tour_guide_real_results.json
tests/: __init__.py  conftest.py  test_agent_orchestrator.py  test_agents_detailed.py  test_cli.py  test_google_maps_client.py  test_junction_extractor.py  test_junction_orchestrator.py  test_junction_processor.py  test_logging_config.py  test_models_coverage.py  test_rest_api.py  test_route_fetcher.py  test_route_fetcher_extended.py  test_tempo_controller.py  test_user_api.py
tour_guide/: __init__.py  __main__.py  config.py  logging_config.py
user_api/: __init__.py  __main__.py  (+3 more)
(+33 files in other folders)
